update index.html with script considerations

--- a/index.html
+++ b/index.html
@@ -454,6 +454,9 @@
             transform: translate(-50%, -50%);
         }
     </style>
+    <!-- Pre-load Three.js and SimplexNoise libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplex-noise/2.4.0/simplex-noise.min.js"></script>
 </head>
 <body>
     <header>
@@ -876,9 +879,3 @@
             
             // Initialize the player
             initPlayer();
-        });
-    </script>
-    
-    <script src="world-visualization.js"></script>
-</body>
-</html>
