--- a/index.html
+++ b/index.html
@@ -908,6 +908,73 @@
 
         }
 
+                /* Add these styles to your <style> section in index.html */
+
+        /* Fullscreen styles */
+        .visualization-container:fullscreen {
+            width: 100vw;
+            height: 100vh;
+            padding: 0;
+            margin: 0;
+            background-color: #f1f8ff;
+        }
+
+        .visualization-container:-webkit-full-screen {
+            width: 100vw;
+            height: 100vh;
+        }
+
+        .visualization-container:-moz-full-screen {
+            width: 100vw;
+            height: 100vh;
+        }
+
+        .visualization-container:-ms-fullscreen {
+            width: 100vw;
+            height: 100vh;
+        }
+
+        /* Make sure the Three.js canvas fills the fullscreen container */
+        .visualization-container:fullscreen #visualization-mount {
+            width: 100vw;
+            height: 100vh;
+        }
+
+        /* Keep controls visible and properly positioned in fullscreen */
+        .visualization-container:fullscreen .visualization-controls {
+            position: absolute;
+            bottom: 20px;
+            left: 20px;
+            z-index: 100;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Ensure 3D labels remain visible in fullscreen */
+        .visualization-container:fullscreen .label3d {
+            z-index: 10;
+        }
+
+        /* Style for the fullscreen button */
+        #toggle-fullscreen {
+            background-color: #1a2a3a;
+            color: white;
+            border: none;
+            padding: 8px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: background-color 0.2s;
+            margin-bottom: 10px;
+            display: block;
+        }
+
+        #toggle-fullscreen:hover {
+            background-color: #2c3e50;
+        }
+
     </style>
 
 </head>
