--- a/index.html
+++ b/index.html
@@ -37,13 +37,7 @@
         <div class="visualization-container">
             <div id="visualization-mount"></div>
             <div class="visualization-controls">
-                <button id="toggle-rotation" class="control-button">Pause Rotation</button>
-                <div class="location-legend">
-                    <h4>Key Locations</h4>
-                    <p><span style="color: #c39bd3;">●</span> Moon Palace</p>
-                    <p><span style="color: #00ffff;">●</span> Sky Palace</p>
-                    <p><span style="color: #ff7f50;">●</span> The Belt</p>
-                </div>
+                <!-- Controls will be added by JavaScript -->
             </div>
         </div>
     </div>
