--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <!-- External CSS files -->
     <link rel="stylesheet" href="css/main-styles.css">
     <link rel="stylesheet" href="css/visualization.css">
+    
+    <!-- Load Three.js from CDN -->
+    <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
+    <script type="importmap">
+    {
+        "imports": {
+            "three": "https://unpkg.com/three@0.162.0/build/three.module.js",
+            "three/addons/": "https://unpkg.com/three@0.162.0/examples/jsm/"
+        }
+    }
+    </script>
 </head>
 <body>
     <header>
@@ -428,7 +439,7 @@
         });
     </script>
 
-    <!-- Load visualization module -->
+    <!-- Load the main application script as a module -->
     <script type="module" src="js/main.js"></script>
     
     <!-- Preload compass component -->
