--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
         });
     </script>
 
-    <!-- Load the main application script as a module -->
+    <!-- Main visualization script -->
     <script type="module" src="js/main.js"></script>
     
     <!-- Preload compass component -->
