--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- External CSS files -->
     <link rel="stylesheet" href="css/main-styles.css">
     <link rel="stylesheet" href="css/visualization.css">
+    <link rel="stylesheet" href="css/modal.css">
     
     <!-- Load Three.js from CDN -->
     <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
